--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,28 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
+
+  - repo: https://github.com/pycqa/flake8
+    rev: "3.9.0"
+    hooks:
+    - id: flake8
+      language_version: python3
+      additional_dependencies: [
+        'flake8-black',
+        'flake8-blind-except',
+        'flake8-comprehensions',
+        'flake8-deprecated',
+        'flake8-mutable',
+        'flake8-string-format',
+        'flake8-tidy-imports'
+      ]
+
+  - repo: git@github.com:humitos/mirrors-autoflake.git
+    rev: v1.1
+    hooks:
+      - id: autoflake
+        args: ['--in-place', '--remove-all-unused-imports', '--remove-unused-variable']
+
   - repo: https://github.com/pycqa/isort
     rev: 5.8.0
     hooks:
@@ -19,7 +41,8 @@ repos:
       - id: isort
         name: isort (pyi)
         types: [pyi]
+
   - repo: https://github.com/psf/black
-    rev: 19.3b0
+    rev: 21.9b0
     hooks:
       - id: black
