--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ isort = "^5.9.3"
 pre-commit = "^2.15.0"
 tox = "^3.24.4"
 mypy = "^0.910"
+autoflake = "^1.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
