Add profiling tools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ pre-commit = "^2.15.0"
 tox = "^3.24.4"
 mypy = "^0.910"
 autoflake = "^1.4"
+snakeviz = "^2.1.0"
+gprof2dot = "^2021.2.21"
+matplotlib = "^3.4.3"
+PyQt5 = "^5.15.4"
+memory-profiler = "^0.58.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
